--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -9,7 +9,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "json-server": "^0.14.0",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {}
 }
